# interface-aegis-test

./: README.md  asyncapi.yaml
.github/workflows/: publish.yml  validate.yml
docs/: CONTRIBUTING.md  EXAMPLES.md  GETTING_STARTED.md  PUB_SUB_GUIDELINES.md  STRUCTURE.md
events/: specification-created.v1.json  specification-requested.v1.json
scripts/: README.md  generate.ps1  generate.py
topics/: specification-created.yaml  specification-requested.yaml
wrappers/java/: README.md  pom.xml
wrappers/java/src/main/java/com/interfaces/aegis/test/messaging/: Destination.java  Topics.java
wrappers/java/src/main/java/com/interfaces/aegis/test/topics/specification/: SpecificationCreated.java  SpecificationRequested.java
wrappers/python/: README.md  pyproject.toml
wrappers/python/aegis_interfaces/: __init__.py
wrappers/python/aegis_interfaces/messaging/: __init__.py  destination.py  topics.py
