[build-system]
requires = ["setuptools>=65.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-test-interfaces"
version = "1.0.0"
description = "Python wrapper for Aegis Test messaging interfaces"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Aegis Test Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegis_interfaces*"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
